@@ -1,9 +1,10 @@
+@echo off
 
 REM *****************************************************************************
 REM
 REM Pentaho Data Integration
 REM
-REM Copyright (C) 2005 - 2019 by Hitachi Vantara : http://www.hitachivantara.com
+REM Copyright (C) 2018 - ${copyright.year} by Hitachi Vantara : http://www.hitachivantara.com
 REM
 REM *****************************************************************************
 REM
@@ -21,4 +22,12 @@ REM limitations under the License.
 REM
 REM *****************************************************************************
 
-sleep 1
+setlocal
+SET initialDir=%cd%
+pushd %~dp0
+SET SPOON_CONSOLE=1
+
+if "%PENTAHO_DI_JAVA_OPTIONS%"=="" set "PENTAHO_DI_JAVA_OPTIONS=-Xms1024m -Xmx3072m -XX:MaxPermSize=256m"
+
+call Spoon.bat -main org.pentaho.pdi.spark.driver.app.builder.SparkDriverAppBuilder %*
+popd
