@@ -1,9 +1,10 @@
+@echo off
 
 REM *****************************************************************************
 REM
 REM Pentaho Data Integration
 REM
-REM Copyright (C) 2005 - 2019 by Hitachi Vantara : http://www.hitachivantara.com
+REM Copyright (C) 2006 - ${copyright.year} by Hitachi Vantara : http://www.hitachivantara.com
 REM
 REM *****************************************************************************
 REM
@@ -21,4 +22,8 @@ REM limitations under the License.
 REM
 REM *****************************************************************************
 
-sleep 1
+setlocal
+cd /D %~dp0
+call "%~dp0set-pentaho-env.bat"
+
+"%_PENTAHO_JAVA%" -Xmx2048m -XX:MaxPermSize=256m -classpath "%~dp0plugins\pdi-pur-plugin\*;%~dp0lib\*" com.pentaho.di.purge.RepositoryCleanupUtil %*
